--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,61 @@
   <groupId>chapi</groupId>
   <artifactId>chapi</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
+
+  <name>chapi</name>
+  <description>chapi parent pom</description>
+
   <modules>
     <module>chapi-map</module>
   </modules>
 
-  <packaging>pom</packaging>
-  <name>chapi</name>
-  <description>chapi parent pom</description>
+  <properties>
+    <guice.version>3.0</guice.version>
+    <guava.version>15.0</guava.version>
+  </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <!-- Utils -->
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>${guava.version}</version>
+      </dependency>
+
+      <!-- DI -->
+      <dependency>
+        <groupId>com.google.inject</groupId>
+        <artifactId>guice</artifactId>
+        <version>${guice.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.inject.extensions</groupId>
+        <artifactId>guice-assistedinject</artifactId>
+        <version>${guice.version}</version>
+      </dependency>
+
+      <!-- http libs -->
+      <dependency>
+        <groupId>com.google.http-client</groupId>
+        <artifactId>google-http-client</artifactId>
+        <version>1.17.0-rc</version>
+      </dependency>
+
+      <!-- testing -->
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.11</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-all</artifactId>
+        <version>1.9.5</version>
+        <scope>test</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 </project>
